--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
@@ -48,6 +48,7 @@
             </div>
         </div>
 
+        <!-- Biographie -->
         <div class="row mb-5">
             <div class="col-lg-12 mb-4">
                 <div class="card bg-dc p-4 rounded-custom shadow-lg hauteur-30">
@@ -55,9 +56,9 @@
                     <p>{{ utilisateur?.biographie }}</p>
                 </div>
             </div>
-
         </div>
 
+        <!-- Intérêts -->
         <div class="row mb-5">
             <div class="col-lg-12 mb-4">
                 <div class="card bg-dc p-4 rounded-custom shadow-lg hauteur-30">
@@ -70,27 +71,35 @@
         <!-- Projets récents (ligne 3) -->
         <div class="row">
             <h3 class="text-warning text-uppercase font-dc mb-4">Projets Récents</h3>
-            <div class="row g-4">
-                @for (projet of utilisateur?.projet | slice: 0: 3; track projet.id) {
-                <div class="col-12 col-md-6 col-lg-4">
-                    <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
-                        <div
-                            class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
-                            @if (projet.imageProjet && projet.imageProjet.length > 0) {
-                            <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
-                                alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
-                            } @else {
-                            <p class="text-muted">Pas d'image disponible</p>
-                            }
-                            <div
-                                class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100">
-                                <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
-                                <p class="file-name text-white text-center mt-2">{{ projet.nom | slice: 0: 20 }}...</p>
-                            </div>
+            <div class="table-wrapper">
+                <ng-container *ngIf="utilisateur?.projet && utilisateur!.projet!.length > 0; else noProjectsTemplate">
+                    <div class="row g-4">
+                        <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of (utilisateur?.projet | slice:0:3);">
+                            <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
+                                <div class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
+                                    <ng-container *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
+                                        <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
+                                    </ng-container>
+                                    <ng-template #noImageTemplate>
+                                        <p class="text-muted">Pas d'image disponible</p>
+                                    </ng-template>
+                                    <div class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100">
+                                        <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
+                                        <p class="file-name text-white text-center mt-2">{{ projet.nom | slice:0:20 }}...</p>
+                                    </div>
+                                </div>
+                            </a>
                         </div>
-                    </a>
-                </div>
-                }
+                    </div>
+                </ng-container>
+
+                <!-- Template affiché lorsqu'il n'y a aucun projet -->
+                <ng-template #noProjectsTemplate>
+                    <div class="no-projects p-5 text-center border border-warning">
+                        <i class="bi bi-folder-fill text-warning display-3"></i>
+                        <h5 class="text-warning mt-4">Aucun projet partagé pour le moment.</h5>
+                    </div>
+                </ng-template>
             </div>
         </div>
     </div>
