--- a/2.DynamoCraft.UI/src/app/modules/admin/components/panel-admin/panel-admin.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/admin/components/panel-admin/panel-admin.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-dc-2">
+<div class="bg-dc-2">
     <div class="row justify-content-center align-items-center py-3 bg-warning text-center mb-0">
         <div class="col-4 icon-container" (click)="setActiveTab('users')" [class.active-tab]="activeTab === 'users'">
             <i class="bi bi-people-fill icon-lg"></i>
