--- a/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
+++ b/2.DynamoCraft.UI/src/app/modules/utilisateur/components/profil/profil.component.html
@@ -10,7 +10,8 @@
             <div class="col-lg-8">
                 <div class="d-flex flex-column align-items-start justify-content-center">
                     <h2 class="text-warning font-dc display-4">{{ utilisateur?.pseudo }}</h2>
-                    <p class="text-warning lead">Membre depuis {{ utilisateur?.dateInscription | date: 'MMMM yyyy' }}</p>
+                    <p class="text-warning lead">Membre depuis {{ utilisateur?.dateInscription | date: 'MMMM yyyy' }}
+                    </p>
                     <div class="d-flex mt-3">
                         <button *ngIf="isCurrentUser()" class="btn btn-warning me-3" (click)="navigateToUserProfile()">
                             <i class="bi bi-pencil-fill me-2 text-white"></i> Modifier le profil
@@ -28,7 +29,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card bg-dark text-white p-4 rounded-custom shadow-lg">
                     <i class="bi bi-folder-fill text-warning display-3 mb-2"></i>
-                    <h5 class="text-warning">Projets Partagés</h5>
+                    <h5 class="text-warning">Partages</h5>
                     <p class="display-4">{{ utilisateur?.projet?.length }}</p>
                 </div>
             </div>
@@ -71,36 +72,39 @@
         <!-- Projets récents (ligne 3) -->
         <div class="row">
             <h3 class="text-warning text-uppercase font-dc mb-4">Projets Récents</h3>
-            <div class="table-wrapper">
-                <ng-container *ngIf="utilisateur?.projet && utilisateur!.projet!.length > 0; else noProjectsTemplate">
-                    <div class="row g-4">
-                        <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of (utilisateur?.projet | slice:0:3);">
-                            <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
-                                <div class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
-                                    <ng-container *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
-                                        <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded" alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
-                                    </ng-container>
-                                    <ng-template #noImageTemplate>
-                                        <p class="text-muted">Pas d'image disponible</p>
-                                    </ng-template>
-                                    <div class="hover-content d-flex justify-content-center align-items-center position-absolute top-0 start-0 w-100 h-100">
-                                        <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
-                                        <p class="file-name text-white text-center mt-2">{{ projet.nom | slice:0:20 }}...</p>
-                                    </div>
+            <ng-container *ngIf="utilisateur?.projet && utilisateur!.projet!.length > 0; else noProjectsTemplate">
+                <div class="row g-4">
+                    <div class="col-12 col-md-6 col-lg-4" *ngFor="let projet of (utilisateur?.projet | slice:0:3);">
+                        <a [routerLink]="['/projet/detail/', projet.id]" class="text-decoration-none">
+                            <div
+                                class="card-hover image-container card h-100 text-center shadow-sm border-0 couleur-fond-2 rounded-custom position-relative overflow-hidden">
+                                <ng-container
+                                    *ngIf="projet.imageProjet && projet.imageProjet.length > 0; else noImageTemplate">
+                                    <img [src]="url + projet.imageProjet[0].nom" class="card-img-top rounded"
+                                        alt="Image du projet" style="width: 100%; height: 350px; object-fit: cover;">
+                                </ng-container>
+                                <ng-template #noImageTemplate>
+                                    <p class="text-muted">Pas d'image disponible</p>
+                                </ng-template>
+                                <div
+                                    class="hover-content d-flex justify-content-center align-items-center">
+                                    <i class="bi bi-eye text-white" style="font-size: 2rem;"></i>
+                                    <p class="file-name text-white text-center mt-2">{{ projet.nom | slice:0:20 }}...
+                                    </p>
                                 </div>
-                            </a>
-                        </div>
+                            </div>
+                        </a>
                     </div>
-                </ng-container>
+                </div>
+            </ng-container>
 
-                <!-- Template affiché lorsqu'il n'y a aucun projet -->
-                <ng-template #noProjectsTemplate>
-                    <div class="no-projects p-5 text-center border border-warning">
-                        <i class="bi bi-folder-fill text-warning display-3"></i>
-                        <h5 class="text-warning mt-4">Aucun projet partagé pour le moment.</h5>
-                    </div>
-                </ng-template>
-            </div>
+            <!-- Template affiché lorsqu'il n'y a aucun projet -->
+            <ng-template #noProjectsTemplate>
+                <div class="no-projects p-5 text-center border border-warning">
+                    <i class="bi bi-folder-fill text-warning display-3"></i>
+                    <h5 class="text-warning mt-4">Aucun projet partagé pour le moment.</h5>
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
